<resources>
    <string name="app_name">GitView</string>
    <string name="search_users">Search users</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="search">Search</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="user_image">User Image</string>
    <string name="bookmark">Bookmark</string>
    <string name="no_data">No Data</string>
    <string name="no_bookmarks_found">No bookmarks found</string>
    <string name="back">Back</string>
    <string name="repository_description_goes_here">Repository description goes here</string>
    <string name="repository_name">Repository Name</string>
    <string name="owner_avatar">Owner Avatar</string>
    <string name="fork">fork</string>
    <string name="profile_image">Profile Image</string>
    <string name="search_github_users">Search GitHub Users</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="repositories">Repositories</string>
    <string name="user_details_here">User details here</string>
    <string name="user_name">User Name</string>
    <string name="created_on">Created on</string>
</resources>