<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start|center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="8dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/buttonBack"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:clickable="true"
            android:contentDescription="@string/back"
            android:focusable="true"
            android:padding="6dp"
            android:src="@drawable/keyboard_backspace_24px" />
    </LinearLayout>

    <TextView
        android:id="@+id/textUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textFollowers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="16dp"
            android:text="@string/followers"
            android:textSize="14sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/textFollowing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/following"
            android:textSize="14sp" />
    </LinearLayout>
    <TextView
        android:id="@+id/createdOn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="4.dp"
        android:text="@string/created_on"
        android:textSize="14sp" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageAvatar"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="16dp"
        android:scaleType="centerCrop"
        android:src="@drawable/baseline_person_24"
        app:shapeAppearanceOverlay="@style/CircleImage" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="24dp"
        android:background="#D3D3D3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/repositories"
        android:textSize="18sp"
        android:textStyle="bold" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerRepos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="false"
            android:paddingBottom="16dp" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</LinearLayout>
