<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="8dp"
    android:elevation="4dp"
    app:cardCornerRadius="16dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="16dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imageViewUser"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/user_image"
            android:scaleType="centerCrop"
            app:shapeAppearanceOverlay="@style/CircleImage" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_name"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>


        <ImageView
            android:id="@+id/imageViewBookmark"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="8dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/bookmark"
            android:padding="4dp"
            android:src="@drawable/bookmark_24px"
            app:tint="@color/green_primary" />
    </LinearLayout>
</androidx.cardview.widget.CardView>
